Stop color palette being hidden by overflow

--- a/src/ColorPaletteColor.css
+++ b/src/ColorPaletteColor.css
@@ -35,7 +35,7 @@
 .color-palette-color-picker-tooltip {
   position: absolute;
   left: 87px;
-  top: 0px;
+  bottom: 0px;
   background-color: #d0d0d0;
   padding: 10px;
   z-index: 1;
@@ -49,6 +49,6 @@
   border-width: 12px;
   border-style: solid;
   border-color: transparent #d0d0d0 transparent transparent;
-  top: 0px;
+  bottom: 42px;
   left: -24px;
 }
